RESOLVED FIXED79113
[GTK] WebAudio build is broken
https://bugs.webkit.org/show_bug.cgi?id=79113
Summary [GTK] WebAudio build is broken
Philippe Normand
Reported 2012-02-21 08:26:17 PST
r108206 broke it, an include of CString.h is missing in AudioBusGtk. I'll also take advantage of this to fix a little warning in WebKitWebAudioSourceGStreamer.cpp :)
Attachments
fix build (2.27 KB, patch)
2012-02-21 08:29 PST, Philippe Normand
no flags
Philippe Normand
Comment 1 2012-02-21 08:29:04 PST
Created attachment 127977 [details] fix build
WebKit Review Bot
Comment 2 2012-02-21 10:21:49 PST
Comment on attachment 127977 [details] fix build Clearing flags on attachment: 127977 Committed r108367: <http://trac.webkit.org/changeset/108367>
WebKit Review Bot
Comment 3 2012-02-21 10:21:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.