[GTK] WebAudio build is broken https://bugs.webkit.org/show_bug.cgi?id=79113

Patch by Philippe Normand <pnormand@igalia.com> on 2012-02-21
Reviewed by Martin Robinson.

* platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:
(webKitWebAudioGStreamerChannelPosition): Set a default value for
the position variable.
* platform/audio/gtk/AudioBusGtk.cpp: Include CString.h, needed
for sharedResourcesPath().

Canonical link: https://commits.webkit.org/96174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108367 268f45cc-cd09-0410-ab3c-d52691b4dbfc